# Engine

./: .clang-format  .vimrc  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  build.bfg  build_script.py  clean_script.py
src/core/: CMakeLists.txt  Engine_Core.cpp  Engine_Core.h  build.bfg  core.cpp  core.h  core_common.h  core_return.h  engine_core.cpp  engine_core.h  linux_core_common.h  loader.cpp  loader.h  test.cpp  windows_core_common.h
src/core/archetype_system/: archetype.cpp  archetype.h  archetype_manager.cpp  archetype_manager.h
src/core/asset_system/: asset.h  asset_manager.cpp  asset_manager.h
src/core/camera_system/: camera.cpp  camera.h  debug_camera.cpp  debug_camera.h
src/core/component_system/: component.h  component_manager.cpp  component_manager.h
src/core/data_structures/: bit_field.cpp  handle.cpp  node_array.h
src/core/data_structures/include/: bit_field.h  handle.h
src/core/data_types/: vector3f.cpp
src/core/data_types/include/: vector3f.h
src/core/ecs/: archetype.cpp  archetype_system.cpp  component.cpp  component_data.cpp  component_data_array.cpp  default_components.cpp  ecs.cpp  entity.cpp  entity_group.cpp  entity_system.cpp  system.cpp
src/core/ecs/include/: .component.h.swp  archetype.h  archetype_system.h  component.h  component.inl  component_data.h  component_data_array.h  component_data_array.inl  default_components.h  ecs.h  entity.h  entity.inl  entity_group.h  entity_system.h  system.h  system.inl
src/core/entity_system/: .entity_manager.h.swp  entity.h  entity_archetype.cpp  entity_archetype.h  entity_archetype_manager.cpp  entity_archetype_manager.h  entity_manager.cpp  entity_manager.h
src/core/event_system/: event_system.cpp  event_system.h
src/core/font/: font.cpp  font.h  font_manager.cpp  font_manager.h
src/core/graphics/: basic_renderer.cpp  camera.cpp  light.cpp  material.cpp  mesh.cpp  render_context.cpp  render_pass.cpp  render_texture.cpp  render_texture_info.cpp  shader.cpp  window.cpp
src/core/graphics/include/: basic_renderer.h  camera.h  graphics.h  light.h  material.h  mesh.h  render_context.h  render_pass.h  render_texture.h  render_texture_info.h  renderer.h  shader.h  shader_common.h  vertex_buffer.h  window.h
src/core/gui/: gui_manager.cpp  gui_manager.h
src/core/handle_system/: handle.cpp  handle.h
src/core/image/: image.cpp  image.h  tga.cpp  tga.h
src/core/include/: core_common.h  return_codes.h
src/core/input/: key_input.cpp  mouse.cpp
src/core/input/include/: input.h  key_codes.h  key_input.h  mouse.h
src/core/input_system/: input_manager.cpp  input_manager.h
src/core/job_system/: job.h  job_manager.cpp  job_manager.h
src/core/math/: fractal_noise.cpp  fractal_noise.h  math_utils.cpp  math_utils.h  matrix.cpp  matrix.h  matrix4f.cpp  perlin.cpp  perlin.h  quaternion.h  vector.cpp  vector.h  vector3f.cpp  vector4f.cpp
src/core/math/include/: color.h  engine_math.h  math_utils.h  math_utils.inl  matrix4f.h  matrix4f.inl  sse.h  vector3f.h  vector3f.inl  vector4f.h  vector4f.inl
src/core/memory/include/: page_allocator.h
src/core/memory_system/: heap.cpp  heap.h  memory.h  page_allocator.cpp
src/core/memory_system/include/: page_allocator.h
src/core/mesh/: .mesh.cpp.swp  .mesh.h.swp  mesh.cpp  mesh.h  mesh_manager.h
src/core/platform/: platform.cpp  platform.h  platform_utils.cpp  platform_utils.h  thread.cpp  thread.h  window.cpp
src/core/platform/graphics/: platform_graphics.cpp
src/core/platform/graphics/include/: platform_graphics.h  platform_graphics_common.h
src/core/platform/graphics/opengl/: CMakeLists.txt  opengl_platform.cpp
src/core/platform/include/: platform.h  shader.h  vbo.h  window.h
src/core/platform/linux/: input_linux.cpp  opengl_linux.cpp  timer_linux.cpp  utils_linux.cpp  window_linux.cpp
src/core/platform/linux/opengl/: opengl.cpp  (+7 more)
src/core/platform/opengl/: opengl.cpp  opengl.h  shader.cpp  shader.h  shader_gl.cpp  vao.cpp  vao.h  vbo.h
src/core/platform/win32/: input_win32.cpp  key_scancode_win32.cpp  opengl_win32.cpp  timer_win32.cpp  utils_win32.cpp  window_win32.cpp
src/core/quadtree/: quadtree.h
src/core/reflection/: meta_base.cpp  meta_field.cpp  meta_info.cpp  meta_struct.cpp  reflection_system.cpp
src/core/reflection/include/: meta_base.h  meta_base.inl  meta_field.h  meta_field.inl  meta_info.h  meta_info.inl  meta_struct.h  meta_struct.inl  reflection.h  reflection_system.h  reflection_system.inl
src/core/system/: system.h  system_manager.cpp  system_manager.h
src/core/terrain_system/: terrain.cpp  terrain.h
src/core/text/: font_file.cpp  font_file.h  text.h
src/core/texture/: texture.cpp  texture.h
src/core/time/: function_perf.cpp  function_perf.h  timer.cpp  timer.h
src/core/utils/: crc32.cpp  logger.cpp  sort.cpp  timer.cpp
src/core/utils/include/: crc32.h  crc32.inl  logger.h  sort.h  timer.h  utils.h
src/core/window/: window.cpp  window.h
src/core/worker_system/: .worker_manager.cpp.swp  worker_manager.cpp  worker_manager.h
src/editor/: CMakeLists.txt  editor.cpp  editor_context.cpp  entity_manager.cpp
src/editor/basic_shapes/: cube.cpp
src/editor/basic_shapes/include/: cube.h
src/editor/gui/: gui.cpp  imgui_canvas.cpp
src/editor/gui/include/: gui.h  imgui_canvas.h
src/editor/imgui/: gui.cpp
src/editor/imgui/include/: gui.h
src/editor/include/: editor_context.h  entity_manager.h
src/editor/loader/: assimp_mesh_loader.cpp  mesh_loader.cpp
src/editor/loader/include/: assimp_mesh_loader.h  mesh_loader.h
src/editor/panels/: console_panel.cpp  hierarchy_panel.cpp  inspector_panel.cpp  menu_bar_panel.cpp  panels.cpp  scene_panel.cpp
src/editor/panels/include/: console_panel.h  hierarchy_panel.h  inspector_panel.h  menu_bar_panel.h  panels.h  scene_panel.h
src/editor/systems/: scene_camera.cpp
src/editor/systems/include/: scene_camera.h
src/introspection/: CMakeLists.txt  file.txt  introspection.cpp  introspector.cpp  lexer.cpp  token.cpp
src/introspection/include/: introspection.h  lexer.h  token.h
src/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.h
(+294 files in other folders)
